tests/snapshots/snapshot_tests__auto_add_stages_todo_md.snap
---
source: tests/snapshot_tests.rs
expression: out.todo_md
---
# TODO
## sample.rs
* [sample.rs:1](sample.rs#L1): trigger --auto-add staging
