tests/snapshots/snapshot_tests__custom_markers_only_todo.snap
---
source: tests/snapshot_tests.rs
expression: out.todo_md
---
# TODO
## sample.rs
* [sample.rs:1](sample.rs#L1): This must appear in TODO.md.
