tests/snapshots/snapshot_tests__custom_todo_path.snap
---
source: tests/snapshot_tests.rs
expression: out
---
# TODO
## sample.rs
* [sample.rs:1](sample.rs#L1): written to a non-default todo-path
