tests/snapshots/snapshot_tests__go_with_block_comments.snap
---
source: tests/snapshot_tests.rs
expression: out.todo_md
---
# FIXME
## server.go
* [server.go:6](server.go#L6): Implement proper error handling across the entire package
# TODO
## server.go
* [server.go:3](server.go#L3): Add proper logging
* [server.go:13](server.go#L13): Add configuration support
